<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@android:color/white"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select_cruise_mode"
        android:textSize="23dp"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <RadioButton
            android:button="@null"
            android:drawableLeft="@drawable/rediobutton_selector"
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_point_cruise"
            android:textColor="@android:color/darker_gray"
            />

        <RadioButton
            android:layout_marginTop="8dp"
            android:button="@null"
            android:drawableLeft="@drawable/rediobutton_selector"
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:text="@string/automatic_fixed_point_cruise"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <ezy.ui.view.RoundButton
            android:id="@+id/tv_sure"
            style="@style/RoundButton"
            app:btnCornerRadius="10dp"
            app:btnPressedRatio="1.5"
            app:btnSolidColor="@color/colorMajor"
            android:layout_margin="20dp"
            android:layout_height="50dp"
            android:text="@string/determine"/>
        <ezy.ui.view.RoundButton
            android:id="@+id/tv_cancel"
            style="@style/RoundButton"
            app:btnCornerRadius="10dp"
            app:btnPressedRatio="1.5"
            app:btnSolidColor="@color/colorMajor"
            android:layout_margin="20dp"
            android:layout_height="50dp"
            android:text="@string/cancel"/>

    </LinearLayout>

</LinearLayout>