<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.stx.xhb.commontitlebar.CustomTitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:titlebar_bg_color="@color/colorPrimary"/>
    <com.xyz.step.FlowViewHorizontal
        android:id="@+id/hflowview"
        android:layout_width="580dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="30dp"
        app:h_bg_radius="6dp"
        app:h_bg_width='4dp'
        app:h_max_step="5"
        app:h_pro_color="@color/colorMajor"
        app:h_pro_radius='6dp'
        app:h_pro_width="5dp"
        app:h_text_padding='10dp'
        app:h_textsize='10dp'
        app:h_time_padding='17dp' />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.linfd.scri.disinfectrobot.view.PinchImageView
            android:id="@+id/iv_bitmap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_no_map" />
        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <!-- 这个是在容器中央的 -->
            <ezy.ui.view.RoundButton
                android:id="@+id/img1"
                android:visibility="invisible"
                style="@style/RoundButton"
                android:layout_centerInParent="true"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="0"
                android:text="一键启动"
                app:btnCornerRadius="stadium"
                app:btnPressedRatio="0.7"
                app:btnSolidColor="@color/colorMajor"/>


            <!-- 在中间图片的左边 -->
            <ezy.ui.view.RoundButton
                android:id="@+id/tv_leftward"
                style="@style/RoundButton"
                android:layout_centerInParent="true"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_toLeftOf="@id/img1"
                android:layout_centerVertical="true"
                android:layout_weight="0"
                android:text="@string/left"
                app:btnCornerRadius="stadium"
                app:btnPressedRatio="0.7"
                app:btnSolidColor="@color/colorMajor"/>


            <!-- 在中间图片的右边 -->
            <ezy.ui.view.RoundButton
                android:id="@+id/tv_rightward"
                style="@style/RoundButton"
                android:layout_toRightOf="@id/img1"
                android:layout_centerVertical="true"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="0"
                android:text="@string/right"
                app:btnCornerRadius="stadium"
                app:btnPressedRatio="0.7"
                app:btnSolidColor="@color/colorMajor"/>

            <!-- 在中间图片的上面-->
            <ezy.ui.view.RoundButton
                android:id="@+id/tv_forward"
                style="@style/RoundButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_above="@id/img1"
                android:layout_centerHorizontal="true"
                android:layout_weight="0"
                android:text="@string/forward"
                app:btnCornerRadius="stadium"
                app:btnPressedRatio="0.7"
                app:btnSolidColor="@color/colorMajor"/>

            <!-- 在中间图片的下面 -->
            <ezy.ui.view.RoundButton
                android:id="@+id/tv_backward"
                style="@style/RoundButton"
                android:layout_centerInParent="true"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/img1"
                android:layout_centerHorizontal="true"
                android:layout_weight="0"
                android:text="@string/backward"
                app:btnCornerRadius="stadium"
                app:btnPressedRatio="0.7"
                app:btnSolidColor="@color/colorMajor"/>


        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="vertical">

            <ezy.ui.view.RoundButton
                android:id="@+id/bt_set_goal"
                android:visibility="visible"
                style="@style/RoundButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="0"
                android:text="@string/point"
                app:btnCornerRadius="stadium"
                app:btnPressedRatio="0.7"
                app:btnSolidColor="@color/colorMajor" />


            <ezy.ui.view.RoundButton
                android:id="@+id/tv_clear_points"
                style="@style/RoundButton"
                android:layout_width="120dp"
                android:layout_height="50dp"
                app:btnCornerRadius="10dp"
                app:btnPressedRatio="0.5"
                app:btnSolidColor="@color/config_color_50_blue"
                android:text="清除描点"
                android:visibility="gone"/>

            <ezy.ui.view.RoundButton
                android:id="@+id/tv_remove_points"
                style="@style/RoundButton"
                android:layout_width="120dp"
                android:layout_height="50dp"
                app:btnCornerRadius="10dp"
                app:btnPressedRatio="0.5"
                app:btnSolidColor="@color/config_color_50_blue"
                android:text="撤回描点"
                android:visibility="gone"/>

            <ezy.ui.view.RoundButton
                android:id="@+id/bt_finish"
                style="@style/RoundButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="0"
                android:layout_marginTop="10dp"
                android:text="@string/finish"
                android:visibility="visible"
                app:btnCornerRadius="stadium"
                app:btnPressedRatio="0.7"
                app:btnSolidColor="@color/colorMajor" />

        </LinearLayout>

        <me.caibou.rockerview.JoystickView
            android:visibility="gone"
            android:id="@+id/joystick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            app:edge_radius="65dp"
            app:stick_color="@color/colorPrimary"
            />
        <ezy.ui.view.RoundButton
            android:id="@+id/bt_quit"
            style="@style/RoundButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="0"
            android:layout_marginTop="10dp"
            android:text="@string/quit"
            app:btnCornerRadius="stadium"
            app:btnPressedRatio="0.7"
            app:btnSolidColor="@color/colorMajor"
            android:layout_gravity="bottom|left"
            android:layout_margin="20dp"/>
    </FrameLayout>
</LinearLayout>